# agribot

./: .gitignore  Farm_Nav_Interview_Deck.pptx  README.md  farm_nav_report.tex  five_lane_farm.world
farm_nav_ws/: .dockerignore  .gitignore  Dockerfile  README.md  WRITEUP.md  record_video.sh  run.sh  verify_run.sh
farm_nav_ws/src/farm_bringup/: CMakeLists.txt  package.xml
farm_nav_ws/src/farm_bringup/config/: nav2_params.yaml
farm_nav_ws/src/farm_bringup/launch/: bringup.launch.py  perception.launch.py  slam.launch.py
farm_nav_ws/src/farm_bringup/worlds/: five_lane_farm.world
farm_nav_ws/src/farm_description/: CMakeLists.txt  package.xml
farm_nav_ws/src/farm_description/launch/: robot_state_publisher.launch.py
farm_nav_ws/src/farm_description/rviz/: farm.rviz
farm_nav_ws/src/farm_description/urdf/: husky.gazebo.xacro  husky.urdf.xacro
farm_nav_ws/src/farm_perception/: package.xml  setup.py
farm_nav_ws/src/farm_perception/farm_perception/: goal_sender_node.py  lane_perception_node.py  path_recorder_node.py  plant_counter_node.py  robot_spawner_node.py  video_recorder_node.py
