<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>farm_bringup</name>
  <version>1.0.0</version>
  <description>World, launch files, Nav2 + RTAB-Map configuration and RViz config
    for the autonomous farm-lane navigation and plant-counting task.</description>
  <maintainer email="chinmaychinmay2003@gmail.com">chinmay</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>farm_description</exec_depend>
  <exec_depend>farm_perception</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_regulated_pure_pursuit_controller</exec_depend>
  <exec_depend>nav2_navfn_planner</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
